loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: '(' expected but identifier found.
    if isOverBaggle()==true(){
       ^